--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ main{
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     background-color: rgb(69, 69, 248);
-    border: solid 2px rgb(69, 69, 248);
+    border: solid 2px #4545f8;
     border-radius: 6px;
     font-weight: bold;
 }
